test/parser/Queries/syntax_errors/fail_K-ForExprWithout-33.xq
(:*************** ne ******** ne *************** ne * let ************* $ :)foo
( $ : Test: K-ForExprWithout-33             let  ne                :)
( Written by: Frans Englich   foo                        :)
(: Date: 2006-10-05T18:29:37+02:00  where            where       where       for   :)
( for Purpose: Variable which  not $  fooinscope.   $             eq  :)
(:*************************** where ** let ************** eq *********:)
 let PREFIXNOTEXIST:NOTEXIST+ 1